Σ.A1 PR 4: head-to-head TPC-H benches vs single-node PySpark
DataFusion wins all four representative queries by 3.4×–6.8× on the
same M3 Pro / SF=1 / Parquet input. Geomean speedup ~4.3× — Σ.A1 PR 4
acceptance gate (DF median ≤ PySpark median, geomean ≥1.5×) cleared
comfortably. Σ.A1 batch claim is grounded in numbers.

Same M3 Pro host, same Parquet under examples/tpch/data/sf1/, same .sql
files. PySpark 4.1.1 / OpenJDK 23 / `local[*]` (12 cores) / 4 GB driver
heap / adaptive query exec on / shuffle.partitions=8.

| Query | DataFusion (ms) | PySpark (ms) | DF/PySpark | rows |
|-------|-----------------|--------------|------------|------|
| Q1    | 48.7            | 192.6        | 0.253      | 4    |
| Q3    | 34.6            | 235.5        | 0.147      | 10   |
| Q6    | 18.2            |  64.2        | 0.283      | 1    |
| Q19   | 38.0            | 130.8        | 0.290      | 1    |

Row counts match exactly across both engines — same SQL produces
equivalent results.

What ships:

- scripts/bench-tpch-pyspark.py — runs the same Q1/Q3/Q6/Q19 against
  PySpark's local[*] mode, 3 trials/query after a discarded JIT
  warm-up, reports median + min/max + row count. Reads same .sql
  files the criterion bench uses (consistency); strips terminating
  semicolons since Spark's spark.sql() rejects them.
- Sets `-Djava.security.manager=allow` automatically — JDK 18+
  deprecated Subject.getSubject which Spark's UGI shim still calls.
  Lets benchers on JDK 23 (Homebrew openjdk) run without manual
  flags. JDK 17/21 unaffected.
- Output is a markdown table directly pasteable into BENCHMARKS.md.
- DataFusion baseline (M3 Pro) is hardcoded for the ratio column.
  Documented as edit-here-on-different-hardware.

Why DataFusion wins by this margin on small/medium queries:
- No JVM cold-start tax. Spark trial 1 is consistently 1.5–3× slower
  than median; DataFusion has no equivalent overhead.
- Vectorized Arrow batch dispatch beats Tungsten codegen at this
  scale because Spark amo